--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>On My Game Photography | About Me</title>
+    <title>Wildlife on the Spillway | About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="assets/style.css" media="screen, handheld" />
     <link rel="stylesheet" type="text/css" href="assets/style-desktop.css" media="screen  and (min-width: 650px)" />
