--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Wildlife on the Spillway Photography</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="assets/style.css" media="screen, handheld" />
+    <!-- <link rel="stylesheet" type="text/css" href="assets/splash-style.css" media="screen, handheld" /> -->
     <link rel="stylesheet" type="text/css" href="assets/style-desktop.css" media="screen  and (min-width: 800px)" />
     <!-- <link rel="stylesheet" href="assets/style.css"> -->
     <!-- <script data-main="assets/script.js" src="assets/require.js"></script> -->
